[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/effects/crown/CrownSpriteFrames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://shaders/BlendAdd.tres" type="Material" id=2]
[ext_resource path="res://shaders/ShaderColor.material" type="Material" id=3]
[ext_resource path="res://scripts/effects/Crown.gd" type="Script" id=4]
[ext_resource path="res://sprites/effects/particles/CrownParticle.png" type="Texture" id=5]

[sub_resource type="Curve" id=1]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.991903, 75.5102 ), 336.054, 0.0, 0, 0 ]

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.82996, 0.647556 ), -0.452381, -0.452381, 0, 0, Vector2( 1, 0.36352 ), 0.144023, 0.0, 0, 0 ]

[node name="Crown" type="AnimatedSprite"]
material = ExtResource( 3 )
frames = ExtResource( 1 )
animation = "wait"
frame = 21
playing = true
centered = false
offset = Vector2( -1, 0 )
script = ExtResource( 4 )

[node name="Particles" type="CPUParticles2D" parent="."]
material = ExtResource( 2 )
emitting = false
amount = 200
lifetime = 3.0
randomness = 0.7
lifetime_randomness = 0.7
texture = ExtResource( 5 )
emission_shape = 3
emission_points = PoolVector2Array( 137, 82, 137, 84, 137, 88, 137, 92, 137, 96, 137, 100, 137, 104, 137, 108, 137, 112, 137, 116, 137, 120, 137, 124, 137, 128, 137, 132, 137, 136, 137, 140, 137, 144, 137, 148, 137, 152, 137, 156, 137, 160, 137, 164, 137, 168, 137, 172, 141, 86, 141, 172, 145, 90, 145, 172, 149, 94, 149, 172, 153, 98, 153, 172, 157, 102, 157, 172, 161, 106, 161, 172, 165, 110, 165, 172, 169, 114, 169, 172, 173, 118, 173, 172, 177, 122, 177, 172, 181, 126, 181, 172, 183, 126, 185, 172, 187, 122, 189, 172, 191, 118, 193, 172, 195, 114, 197, 172, 199, 110, 201, 172, 203, 106, 205, 172, 207, 102, 209, 172, 211, 98, 213, 172, 215, 94, 217, 172, 219, 90, 221, 172, 223, 86, 225, 172, 227, 82, 229, 172, 231, 86, 233, 172, 235, 90, 237, 172, 239, 94, 241, 172, 243, 98, 245, 172, 247, 102, 249, 172, 251, 106, 253, 172, 255, 110, 257, 172, 259, 114, 261, 172, 263, 118, 265, 172, 267, 122, 269, 172, 271, 126, 273, 126, 273, 172, 277, 122, 277, 172, 281, 118, 281, 172, 285, 114, 285, 172, 289, 110, 289, 172, 293, 106, 293, 172, 297, 102, 297, 172, 301, 98, 301, 172, 305, 94, 305, 172, 309, 90, 309, 172, 313, 86, 313, 172, 317, 82, 317, 84, 317, 88, 317, 92, 317, 96, 317, 100, 317, 104, 317, 108, 317, 112, 317, 116, 317, 120, 317, 124, 317, 128, 317, 132, 317, 136, 317, 140, 317, 144, 317, 148, 317, 152, 317, 156, 317, 160, 317, 164, 317, 168, 317, 172 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, -1 )
spread = 90.0
gravity = Vector2( 0, -22 )
initial_velocity = 22.0
initial_velocity_random = 0.8
linear_accel_curve = SubResource( 1 )
scale_amount_curve = SubResource( 2 )

[node name="ParticlesDeletion" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
[connection signal="animation_finished" from="." to="." method="_on_Crown_animation_finished"]
[connection signal="timeout" from="ParticlesDeletion" to="." method="_on_ParticlesDeletion_timeout"]
